# LightAutoML

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  LightAutoML-0.2.16-py3-none-any.whl  LightAutoML-0.3.7.3-py3-none-any.whl  README.md  Tutorial_13_ABtesting.ipynb  Tutorial_9_Matching.ipynb  Tutorial_basics.ipynb  build_docs.sh  build_package.sh  check_docs.py  hillstrom.csv  info.json  lama.whl  lama_cpu.py  launch_selections_on_source.py  main.py  pyproject.toml  requirements.txt  run_selections.py  selection_doc.md  setup.cfg  setup.py  test.ipynb  test.py  test_package.sh  tox.ini  visual_example.ipynb
slama/: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
slama/dev-tools/config/: spark-lama-data-pv-pvc.yaml  spark-lama-ns.yaml
slama/dev-tools/config/experiments/: default-spark-conf.yaml  experiment-config-debug.yaml  experiment-config-lama-only.yaml  experiment-config-spark-cluster-automl-lgb-load-pipeline.yaml  experiment-config-spark-cluster-automl-lgb.yaml  experiment-config-spark-cluster-automl-linear_l2-load-pipeline.yaml  experiment-config-spark-cluster-automl-linear_l2.yaml  experiment-config-spark-cluster.yaml  experiment-config-spark-quality-exps.yaml  experiment-config-spark-reader-le-te.yaml  experiment-config-spark-scaling-exps.yaml
slama/dev-tools/docker/: Dockerfile  spark-lama-k8s.dockerfile  spark-lama.dockerfile  spark-pyspark-python.dockerfile
slama/dev-tools/experiments/: dataset_utils.py  experiment-job.py  lama_experiments.py  launch.py  log_parsing.py  spark_experiments.py  tmp_xgboost.py
slama/docker/: spark-lama.dockerfile
slama/docker-hadoop/: .gitignore  Makefile  README.md  docker-compose-v3.yml  docker-compose.yml  hadoop.env
slama/docker-hadoop/base/: Dockerfile  entrypoint.sh
slama/docker-hadoop/datanode/: Dockerfile  run.sh
slama/docker-hadoop/historyserver/: Dockerfile  run.sh
slama/docker-hadoop/namenode/: Dockerfile  run.sh
slama/docker-hadoop/nginx/: Dockerfile  bde-hadoop.css  default.conf
slama/docker-hadoop/nodemanager/: Dockerfile  run.sh
slama/docker-hadoop/resourcemanager/: Dockerfile  run.sh
slama/docker-hadoop/spark-submit/: Dockerfile  core-site.xml  yarn-site.xml
slama/docker-hadoop/submit/: Dockerfile  run.sh
slama/docker/jar-builder/: build.sh  scala.dockerfile
slama/docker/spark-lama/: spark-py-lama.dockerfile
slama/docs/: Tutorials.rst  addons.rst  conf.py  index.rst  ml_algo.rst  mock_docs.py  report.rst  tasks.losses.rst
slama/docs/_static/: style.css
slama/docs/_templates/autosummary/: module.rst
slama/docs/slama-docs/: automl.rst  dataset.rst  kubernetes_cluster.rst  ml_algo.rst  pipelines.features.rst  pipelines.ml.rst  pipelines.rst  pipelines.selection.rst  reader.rst  report.rst  slama_index.rst  slama_minikube_readme.rst  standalone_cluster.rst  tasks.rst  transformers.rst  validation.rst  yarn_cluster.rst
slama/docs/tutorials/: tutor_1.ipynb  tutor_3.ipynb
slama/examples/: README.md  demo0.py  demo11.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo9.py  simple_tabular_classification.py
slama/examples/data/: .gitignore  tiny_used_cars_data.csv
slama/examples/optimization/: conditional_parameters.py  custom_search_space.py  sequential_parameter_search.py
slama/examples/spark/: automl_feature_scores.py  automl_multiclass.py  demo_iterative_feature_importance.py  demo_optuna_tuner.py  examples_utils.py  lama-tabular-preset.py  spark-ml-pipe-lgb.py  spark-ml-pipe-linearlgbfs.py  spark-report-deco.py  tabular-preset-automl.py
slama/examples/tutorials/: Tutorial_1_basics.ipynb  Tutorial_2_WhiteBox_AutoWoE.ipynb  Tutorial_3_sql_data_source.ipynb  Tutorial_4_NLP_Interpretation.ipynb  Tutorial_5_uplift.ipynb  Tutorial_6_custom_pipeline.ipynb  Tutorial_7_ICE_and_PDP_interpretation.ipynb
slama/lightautoml/addons/interpretation/: l2x_model.py  lime.py  utils.py
slama/lightautoml/addons/uplift/: base.py  metrics.py  utils.py
slama/lightautoml/addons/utilization/: utilization.py
slama/lightautoml/automl/: base.py
slama/lightautoml/automl/presets/: __init__.py  base.py  tabular_config.yml  tabular_presets.py  text_config.yml  utils.py  whitebox_presets.py
slama/lightautoml/dataset/: base.py  utils.py
slama/lightautoml/image/: image.py
slama/lightautoml/ml_algo/: base.py  boost_cb.py  boost_lgbm.py  linear_sklearn.py  utils.py  whitebox.py
slama/lightautoml/ml_algo/torch_based/: __init__.py  linear_model.py
slama/lightautoml/ml_algo/tuning/: optuna.py
slama/lightautoml/pipelines/features/: base.py  linear_pipeline.py  text_pipeline.py  wb_pipeline.py
slama/lightautoml/pipelines/ml/: nested_ml_pipe.py  whitebox_ml_pipe.py
slama/lightautoml/pipelines/selection/: importance_based.py  permutation_importance_based.py
slama/lightautoml/reader/: base.py  guess_roles.py  tabular_batch_generator.py
slama/lightautoml/report/lama_report_templates/: interpretation_subsection.html  train_set_section.html  whitebox_section.html
slama/lightautoml/spark/: __init__.py  mlwriters.py  utils.py
slama/lightautoml/spark/automl/: base.py  blend.py
slama/lightautoml/spark/dataset/: base.py  roles.py
slama/lightautoml/spark/ml_algo/: base.py  boost_lgbm.py  linear_pyspark.py
slama/lightautoml/spark/pipelines/: base.py
slama/lightautoml/tasks/: base.py  utils.py
slama/lightautoml/text/: __init__.py  dl_transformers.py  dp_utils.py  tokenizer.py  utils.py
slama/lightautoml/transformers/: base.py  categorical.py  datetime.py  decomposition.py  image.py  numeric.py  text.py
slama/lightautoml/utils/: logging.py  tmp_utils.py
slama/lightautoml/validation/: base.py  np_iterators.py  utils.py
slama/scala-lightautoml-transformers/: .gitignore  build.sbt
slama/scala-lightautoml-transformers/project/: plugins.sbt
slama/scala-lightautoml-transformers/resources/: data.json  test_data.json
slama/tests/: conftest.py
slama/tests/integration/: test_default_tabular.py
slama/tests/spark/unit/: __init__.py  (+2 more)
(+783 files in other folders)
