[tool.poetry]
name = "LightAutoML"
version = "0.4.0b1"
description = "Fast and customizable framework for automatic ML model creation (AutoML)"
authors = [
    "Alexander Ryzhkov <alexmryzhkov@gmail.com>",
    "Anton Vakhrushev <btbpanda@gmail.com>",
    "Dmitrii Simakov <dmitryevsimakov@gmail.com>",
    "Rinchin Damdinov <damdinovr@gmail.com>",
    "Alexander Kirilin <adkirilin@gmail.com>",
    "Vasilii Bunakov <va.bunakov@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lightautoml.readthedocs.io/en/latest/"
repository = "https://github.com/AILab-MLTools/LightAutoML"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]


[tool.poetry.dependencies]
python = ">=3.8, <3.13"

poetry-core = "^1.0.0"
pandas = "<2.0.0"
numpy = [
    {version = ">=1.22, <2.0.0", python = ">=3.10, < 3.12"},
    {version = "<2.0.0"}
]
scipy = [
    {version = "*", python = ">=3.9"},
    {version = "<=1.11", python = "<3.9"},
]
scikit-learn = [
    {version = ">=0.22, <=0.24.2", python = "<3.10"},
    {version = ">=0.22", python = ">=3.10"},
]
lightgbm = [
    {version = ">=2.3"},
    {version = "^4.4.0", platform = "darwin"}, # https://github.com/microsoft/LightGBM/issues/5328#issuecomment-2169128216
]
catboost = ">=0.26.1"
xgboost = "^2.0.0"
optuna = "*"
torch = [
    {version = ">=1.9.0, <=2.0.0", python = "<3.11"},
    {version = "*", python = ">=3.11"},
]
holidays = "*"
statsmodels = "<=0.14.0"
networkx = "*"
cmaes = "*"
pyyaml = "*"
tqdm = "*"
joblib = "<1.3.0"
autowoe = ">=1.2"
jinja2 = "*"
json2html = "*"
seaborn = "*"
SQLAlchemy = ">=2.0"


# NLP
gensim = {version = ">=4", optional = true}
nltk = {version = "*", optional = true}
transformers = {version = ">=4", optional = true}

# CV
albumentations = {version = "<=1.0.3", optional = true}
timm = {version = ">=0.9.0", optional = true}
opencv-python = {version = "<=4.8.0.74", optional = true}
PyWavelets = {version = "*", optional = true}
torchvision = [
    {version = "<=0.14.0", python = "<3.11", optional = true},
    {version = "*", python = ">=3.11", optional = true},
]

# AFG
featuretools = {version = ">=1.11.1", optional = true}

# Report (pdf)
weasyprint = {version = "52.5", optional = true}
cffi = {version = "1.14.5", optional = true}

# HypEx
faiss-cpu = {version = "*", optional = true}


[tool.poetry.extras]
cv = [
    "albumentations",
    "timm",
    "opencv-python",
    "PyWavelets",
    "scikit-image",
    "torchvision"
]
nlp = [
    "gensim",
    "nltk",
    "transformers"
]
report = [
    "cffi",
    "weasyprint"
]

afg = [
    "featuretools"
]

hypex = [
    "faiss-cpu",
    "ipython"
]

all = [
    "albumentations",
    "efficientnet-pytorch",
    "opencv-python",
    "PyWavelets",
    "scikit-image",
    "torchvision",
    "gensim",
    "nltk",
    "transformers",
    "cffi",
    "weasyprint",
    "featuretools",
    "faiss-cpu",
    "ipython"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
